rnsc/test_data/integration/error/parser/method_directive/access_flags/all_invalid.rns
.class MethodWithAllInvalidFlags
.super java/lang/Object

.method interface module annotation enum super main ()V
.method_end
.class_end
